--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/vite": "^4.1.13",
+    "@web3forms/react": "^1.1.3",
     "aos": "^2.3.4",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
